--- a/words/templates/list.html
+++ b/words/templates/list.html
@@ -13,9 +13,10 @@
 		<div class="relative h-12 w-12 py-5 pl-4">
 			<div class="absolute h-16 w-16">
 				<a href="{% url 'search' %}">
-				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-					<path stroke-linecap="round" stroke-linejoin="round" d="M9 15L3 9m0 0l6-6M3 9h12a6 6 0 010 12h-3" />
-				</svg>
+					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+						<path stroke-linecap="round" stroke-linejoin="round" d="M9 15L3 9m0 0l6-6M3 9h12a6 6 0 010 12h-3" />
+					</svg>
+				</a>
 			</div>
 		  </div>
 
@@ -24,7 +25,16 @@
 				{% if words %}
 					{% autoescape off %}
 					{% for w in words %}
-						<span class="m-5 text-2xl">{{ w.word }} {{ w.meta }} {{ w.definition }}</span>
+					<div class="h-16 flex flex-row hover:bg-slate-100">
+						<div class="w-16">
+							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
+							</svg>
+						</div>
+						<div>
+							<span class="m-5 text-2xl">{{ w.word }} {{ w.meta }} {{ w.definition }}</span>
+						</div>
+					</div>
 					{% endfor %}
 					{% endautoescape %}
 				{% else %}
